  correct name of the player who had cast an area attack spell.
- Damage numbers above 65535 (e.g. from Guillotine Fist) should be
  displayed correctly now, but my monk can't do that much damage; can
  someone test and report on the forum please?
- added optional parameter for chist, "chist 10" will show last 10 lines
  of chat.txt
- added a handfull of log message domain, refer to Log.pm

==================
### OpenKore 1.2.1
==================

- Removed error handler; it seems to be causing problems.
- Storage fix.
- Fix a crash with swrite() when using Perl 5.8 on some Linux systems.
- Fix a divison by zero error.
- Fix creation of "logs" folder on Win32.


==================
### OpenKore 1.2.0
==================

NOTE: This release depends on:
* tablepack version 1.2.
* The Perl module Win32::Console::ANSI (only if you're not using the .exe)

New features:
- Console text is now colorized. The colors are defined in
  control\consolecolors.txt
- You can now specify more than one item in useSelf_item_#.
- New regular expression for detecting GM names. This will get rid of many
  false matches. Names like "LaGMaster" don't match anymore.
- If dcOnDisconnect is set to -1, kore will not respawn nor disconnect on
  death.
- mon_control.txt's auto-teleport flag can now have two values:
  1 = teleport when monster's on screen
  2 = teleport when monster hits you
- Ability to automatically switch configuration file after a while.
  See the "New/changed config option" section about autoConfChange.
- Ability to tell kore to never sit, even when overweight.
- Both party and deal requests can now be auto-accepted.
  See the "New/changed config option" section about paryAuto/dealAuto.
- "drop" and "storage get" can now drop/get more than 1 item. Example:
  storage get 4,7   (gets storage item 4 and 7)
  drop 3,5          (drops inventory item 3 and 5)
- dumpData() now also dumps raw data so you can see strings (just like in
  hex editors).