@@ -48,6 +48,7 @@
 - added optional parameter for chist, "chist 10" will show last 10 lines
   of chat.txt
 - added a handfull of log message domain, refer to Log.pm
+- background color is now supported
 
 ==================
 ### OpenKore 1.2.1
